Add capacity testing, search enhancements, and Redis tuning
Introduce load tests to measure capacity at fixed shopper levels and document their usage, ensuring readiness for concurrent traffic loads. Optimize admin product search with trigram indexes and query rewrites for improved performance under large catalogues. Tune database and Redis connection pooling configurations based on load test findings to prevent capacity bottlenecks.